JVM调优，增加G1 GC 参数